--- a/index.html
+++ b/index.html
@@ -6,40 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Коты🐱</h1>
-    <hr />
-    <p>
-      <b>Коты</b> - очень милые существа. <i>Озорные, шустрые, краисвые</i> -
-      эти прилагательные о них.
-    </p>
-    <img
-      src="https://i.pinimg.com/736x/c8/cc/24/c8cc24bba37a25c009647b8875aae0e3.jpg"
-      alt="Коты"
-      width="150px"
-    />
-    <img
-      src="https://img.freepik.com/free-photo/cute-kitten-relaxing-indoors_23-2150752790.jpg"
-      alt="Коты"
-      width="150px"
-    />
-    <img
-      src="https://habrastorage.org/getpro/habr/upload_files/8bb/c49/d15/8bbc49d152ae72e919c769d8a1937cad.png"
-      alt="Коты"
-      width="150px"
-    />
-    <h2>Качества котов</h2>
-    <ul>
-      <li>Игривость</li>
-      <li>Доброта</li>
-      <li>Заботливость</li>
-      <li>Любвеобильность</li>
-    </ul>
-    <h2>Интересные факты о котах</h2>
-    <ol>
-        <li>Эти животные способны издавать 100 звуков</li>
-        <li>Мяуканье язык общения котов</li>
-        <li>Усы необходимы кошке для перемещения в пространстве</li>
-    </ol>
-    <p>Вы можете поискать доп информацию о котах по этой <a href="#">ссылке</a>,это поисковик <b>Яндекс</b></p>
+    <h1>It's layout branch</h1>
   </body>
 </html>
